--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "main": "dist/es2015/index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/MrTeyn/aurelia-adal.git"
+    "url": "git+https://github.com/Jrousell/aurelia-adal.git"
   },
   "devDependencies": {
     "aurelia-tools": "^0.1.18",
@@ -56,8 +56,9 @@
     "yargs": "^2.1.1"
   },
   "jspm": {
+    "jspmPackage": true,
     "main": "index",
-    "format": "es2015",
+    "format": "amd",
     "directories": {
       "dist": "dist/es2015"
     },
