--- a/package.json
+++ b/package.json
@@ -57,11 +57,7 @@
   },
   "jspm": {
     "jspmPackage": true,
-    "main": "index",
-    "format": "amd",
-    "directories": {
-      "dist": "dist/es2015"
-    },
+    "main": "dist/es2015/index",
     "dependencies": {
       "adaljs": "github:AzureAd/azure-activedirectory-library-for-js@^1.0.8",
       "aurelia-dependency-injection": "npm:aurelia-dependency-injection@^1.0.0-beta.1.2.0",
