updated to adal-angular

--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "jspmPackage": true,
     "main": "dist/es2015/index",
     "dependencies": {
-      "adaljs": "github:AzureAd/azure-activedirectory-library-for-js@^1.0.8",
+      "adal-angular": "^1.0.14",
       "aurelia-dependency-injection": "npm:aurelia-dependency-injection@^1.0.0-beta.1.2.0",
       "aurelia-logging": "npm:aurelia-logging@^1.0.0-beta.1.2.0",
       "aurelia-pal": "npm:aurelia-pal@^1.0.0-beta.1.2.0",
@@ -68,5 +68,8 @@
     "devDependencies": {
       "aurelia-polyfills": "npm:aurelia-polyfills@^1.0.0-beta.1.1.0"
     }
+  },
+  "dependencies": {
+    "adal-angular": "^1.0.14"
   }
 }
