--- a/package.json
+++ b/package.json
@@ -56,10 +56,9 @@
     "yargs": "^2.1.1"
   },
   "jspm": {
-    "jspmPackage": true,
     "main": "dist/es2015/index",
     "dependencies": {
-      "adal-angular": "^1.0.14",
+      "adal-angular": "npm:adal-angular@^1.0.14",
       "aurelia-dependency-injection": "npm:aurelia-dependency-injection@^1.0.0-beta.1.2.0",
       "aurelia-logging": "npm:aurelia-logging@^1.0.0-beta.1.2.0",
       "aurelia-pal": "npm:aurelia-pal@^1.0.0-beta.1.2.0",
