--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "license": "CC0-1.0",
   "author": "Martijn Hoebergen, Niels Vleming",
-  "main": "dist/es2015/index.js",
+  "main": "dist/commonjs/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Jrousell/aurelia-adal.git"
